# yourtube

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
plans/: 2026-06-09-yourtube-design-phase-1.md  2026-06-09-yourtube-design-phase-2.md  2026-06-09-yourtube-design-phase-3.md  2026-06-09-yourtube-design-phase-3a.md  2026-06-09-yourtube-design-phase-3b.md  2026-06-09-yourtube-design-phase-4.md  2026-06-09-yourtube-design-phase-5.md  2026-06-09-yourtube-design-phase-6.md  2026-06-09-yourtube-design.md  2026-06-12-yourtube-design-phase-10.md  2026-06-12-yourtube-design-phase-11.md  2026-06-12-yourtube-design-phase-12.md  2026-06-12-yourtube-design-phase-13.md  2026-06-12-yourtube-design-phase-14.md  2026-06-12-yourtube-design-phase-15.md  2026-06-12-yourtube-design-phase-7-10.md  2026-06-12-yourtube-design-phase-7.md  2026-06-12-yourtube-design-phase-8.md  2026-06-12-yourtube-design-phase-9.md  2026-07-03-batch-preview-playlist-implementation.md  2026-07-03-yourtube-design-phase-16.md  2026-07-03-yourtube-design-phase-17.md  2026-07-03-yourtube-design-phase-18.md  2026-07-03-yourtube-design-phase-19.md  2026-07-03-yourtube-design-phase-20.md  2026-07-04-architecture-deepening-phase-1.md  2026-07-04-architecture-deepening-phase-2.md  2026-07-04-architecture-deepening-phase-3.md  2026-07-04-architecture-deepening-phase-4.md  2026-07-04-architecture-deepening.md
tests/: conftest.py  test_config.py  test_db.py  test_health.py
(+60 files in other folders)
